chore: speed intake
